--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "dev": "nodemon app.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -31,5 +32,8 @@
         "passport": "^0.7.0",
         "passport-local": "^1.0.0",
         "passport-local-mongoose": "^8.0.0"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
